added mobs to leveleditor